force-app/main/default/objects/Case/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <formula>Contact.Territory__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory</label>
    <type>Text</type>
</CustomField>