force-app/main/default/objects/Case/fields/Third_Party_Case__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Case__c</fullName>
    <label>Third Party Case #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>