force-app/main/default/objects/Case/fields/VIP__c.field-meta.xml
<CustomField>
    <fullName>VIP__c</fullName>
    <formula>Contact.VIP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP</label>
    <type>Checkbox</type>
</CustomField>