force-app/main/default/objects/Case/fields/Voice_Mail__c.field-meta.xml
<CustomField>
    <fullName>Voice_Mail__c</fullName>
    <formula>Contact.Voice_Mail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Voice Mail</label>
    <type>Text</type>
</CustomField>