force-app/main/default/objects/Case/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <label>Work Order</label>
    <length>100</length>
    <type>Text</type>
</CustomField>