force-app/main/default/objects/Case/fields/X1st_FU__c.field-meta.xml
<CustomField>
    <fullName>X1st_FU__c</fullName>
    <label>1st FU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>