force-app/main/default/objects/Case/fields/X1st_FU_DateTime__c.field-meta.xml
<CustomField>
    <fullName>X1st_FU_DateTime__c</fullName>
    <label>1st FU DateTime</label>
    <type>DateTime</type>
</CustomField>