force-app/main/default/objects/Case/fields/X2nd_Follow_up__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Follow_up__c</fullName>
    <label>2nd Follow-up</label>
    <length>255</length>
    <type>Text</type>
</CustomField>