force-app/main/default/objects/Case/fields/X2nd_FU_DateTime__c.field-meta.xml
<CustomField>
    <fullName>X2nd_FU_DateTime__c</fullName>
    <label>2nd FU DateTime</label>
    <type>DateTime</type>
</CustomField>