force-app/main/default/objects/Case/fields/X3rd_Follow_up__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Follow_up__c</fullName>
    <label>3rd Follow-up</label>
    <length>255</length>
    <type>Text</type>
</CustomField>