force-app/main/default/objects/Case/fields/X3rd_FU_DateTime__c.field-meta.xml
<CustomField>
    <fullName>X3rd_FU_DateTime__c</fullName>
    <label>3rd FU DateTime</label>
    <type>DateTime</type>
</CustomField>