force-app/main/default/objects/Case/recordTypes/HC_Clinical.recordType-meta.xml
<RecordType>
    <fullName>HC_Clinical</fullName>
    <active>true</active>
    <businessProcess>HC Clinical</businessProcess>
    <label>HC Clinical</label>
</RecordType>