force-app/main/default/objects/Case/listViews/Appointment_Case.listView-meta.xml
<ListView>
    <fullName>Appointment_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Appointment</label>
    <queue>Appointment</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>