force-app/main/default/objects/Case/listViews/Email_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Email_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Email Queue</label>
    <queue>Email_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>